--- a/uniRMC/uniRMC_pwa.html
+++ b/uniRMC/uniRMC_pwa.html
@@ -323,6 +323,30 @@ button{ box-shadow: 0 6px 14px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.
       padding: 0 !important;
     }
 
+
+    /* === UI tweak v9: tighter vertical layout for 800px mobile portrait === */
+    main{ gap:10px; }
+    section{ padding:10px; }
+    h2{ margin:0 0 8px; }
+    .grid{ gap:8px; }
+    .grid2{ gap:8px; }
+    button{ padding:12px 9px; }
+    /* Tighten last (log/reset) header row */
+    main > section:last-of-type > h2{ margin:0 0 6px !important; }
+    .logbtn-left{ width:44px !important; padding:6px 0 !important; font-size:14px !important; line-height:1 !important; }
+    .logbtn-right{ width:92px !important; padding:6px 0 !important; font-size:12px !important; letter-spacing:.2px !important; }
+    /* Make emoji + RESET a bit shorter visually */
+    .logbtn{ border-radius:14px !important; }
+    @media (max-width: 480px){
+      :root{ --pad: 10px; }
+      main{ padding-top:8px; padding-bottom:10px; gap:8px; }
+      section{ padding:9px; }
+      .grid{ gap:7px; }
+      .grid2{ gap:7px; }
+      button{ padding:11px 8px; font-size:13px; }
+      h2{ margin:0 0 7px; }
+    }
+
 </style>
 </head>
 <body>
@@ -331,7 +355,7 @@ button{ box-shadow: 0 6px 14px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.
 <div class="brand-title" style="font-weight:800; letter-spacing:.2px; font-size:22px;">Universal RMC</div>
 <div class="pill" id="clock">--:--</div>
 </div>
-<div class="row status-row" style="margin-top:10px">
+<div class="row status-row" style="margin-top:6px">
 <div class="pill bad" id="st-mqtt">MQTT: --</div>
 <div class="pill bad" id="st-gw">Gateway: --</div>
 <div class="pill bad" id="st-ble">BLE: --</div>
@@ -351,7 +375,7 @@ button{ box-shadow: 0 6px 14px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.
 <button onclick="sendMi('mute')">MUTE</button>
 <button onclick="sendMi('volup')">VOL+</button>
 </div>
-<div style="height:10px"></div>
+<div style="height:6px"></div>
 <div class="grid2">
 <button onclick="sendMi('MB:2000')">⟵ BACK</button>
 <button onclick="sendMi('MB:0080')">HOME</button>
